# ai-architecture

./: .gitignore  .pre-commit-config.yaml  LICENSE  NOTICE  README.md  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
deploy/: docker-compose.yml
deploy/llm_proxy/: README.md  config.yaml  docker-compose.yml
deploy/llms/backend/ollama/: README.md  docker-compose.yaml
deploy/llms/proxy/: README.md  config.yaml  docker-compose.yml
deploy/redis/: docker-compose.yml
deploy/workflows/prefect/: docker-compose.yml
doc/: orchestration.md
examples/: pydantic_agent.py
examples/fraud_detection/: README.md
examples/prefect/: Dockerfile  artifact_progress_bar.py  hello_world_deploy.py  hello_world_serve.py  human_approval.py  human_in_the_loop.py  query_flows.py
examples/rag/: README.md
examples/sql_agent/: README.md
infra/context/: context.py
infra/event_bus/: base.py  event_bus.py  facade.py  factory.py  redis_bus.py
src/ai_architecture/: __init__.py
src/ai_architecture/agent/: orchestrator_agent.py
src/ai_architecture/infra/context/: context.py
src/ai_architecture/infra/event_bus/: __init__.py  event_bus.py  event_bus_client.py  factory.py  redis_bus.py  redis_bus_client.py
src/ai_architecture/infra/identity/: __init__.py
src/ai_architecture/infra/llm_proxy/: __init__.py
src/ai_architecture/infra/registry/: __init__.py  redis_registry.py  registry.py
src/ai_architecture/workflows/: orchestrator.py  prefect_orchestrator.py
tests/: conftest.py  test_context.py  test_redis_event_bus.py  test_redis_message.py  test_redis_registry.py
tests/redis/: conftest.py  docker-compose.yml  test_redis_registry.py
tests/test_redis/: conftest.py  docker-compose.yml  test_redis_message.py  test_redis_registry.py
