[project]
name = "ai-architecture"
description = "Distributed AI agent system for robust, event-driven workflows with extensible infrastructure."
version = "0.1.0"
authors = [
    { name = "Antoine Gerardin", email = "antoine.gerardin@examplgmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "types-redis>=4.6.0.20241004",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.21",
    "pytest-docker>=2.0",
    "ruff>=0.4.4",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
