[project]
name = "ai-architecture"
description = "Distributed AI agent system for robust, event-driven workflows with extensible infrastructure."
version = "0.1.0"
authors = [
    { name = "Antoine Gerardin", email = "antoine.gerardin@examplgmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "prefect>=3.4.20",
    "pydantic>=2.0",
    "pydantic-ai>=1.0.10",
    "redis>=6.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.21",
    "pytest-docker>=2.0",
    "ruff>=0.4.4",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
    "pytest-docker>=3.2.3",
]
